--- a/TODO/index.html
+++ b/TODO/index.html
@@ -41,7 +41,7 @@
 
   <script src="../js/cpp.js"></script>
   <script src="../js/gitter.js"></script>
-  <script src="../js/html.js"></script>
+  <script src="../js/utility.js"></script>
   <script src="../js/youtube.js"></script> 
 
   
@@ -173,7 +173,7 @@
           <div role="main">
             <div class="section">
               
-                <p><img alt="HTML" src="https://waffle.io/boost-experimental/di" /></p>
+                <p><img alt="IFRAME" src="https://waffle.io/boost-experimental/di" /></p>
               
             </div>
           </div>
