--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <script src="./js/cpp.js"></script>
   <script src="./js/gitter.js"></script>
-  <script src="./js/html.js"></script>
+  <script src="./js/utility.js"></script>
   <script src="./js/youtube.js"></script> 
 
   
@@ -275,7 +275,7 @@ app app_{controller_, user_};
 </code></pre>
 
 <p>Notice that <strong>ORDER</strong> in which above dependencies are created is <strong>IMPORTANT</strong> as well as that
-<em>ANY</em> change in <strong>ANY</strong> of the objects constructor will <strong>REQUIRE</strong> a change in this code!</p>
+<strong>ANY</strong> change in <strong>ANY</strong> of the objects constructor will <strong>REQUIRE</strong> a change in this code!</p>
 <p>DI library, not only let you forget about maintaining above code (See <a href="tutorial/index.html#1-basic-create-objects-tree">Create Objects Tree</a>),
 but also can help you with...</p>
 <ul>
@@ -316,6 +316,10 @@ but also can help you with...</p>
 <li>Boost.DI gives better understanding about objects hierarchy (See <a href="extensions/index.html#uml-dumper">UML Dumper</a>)
 <img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/hello_world.cpp" /></li>
 </ul>
+<p><img alt="CPP(BTN)" src="./Run_UML_Dumper_Extension|https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/policies/uml_dumper.cpp" />
+<img alt="CPP(BTN)" src="./Run_XML_Injection_Extension|https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/injections/xml_injection.cpp" />
+<img alt="CPP(BTN)" src="./Run_Constructible_Example|https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/user_guide/policies_constructible_local.cpp" /></p>
+<p><br /><br /></p>
 <h3 id="boostdi-design-goals">Boost.DI design goals</h3>
 <ul>
 <li>Be as fast as possible (See <a href="overview/index.html#performance">Performance</a>)</li>
@@ -393,5 +397,5 @@ but also can help you with...</p>
 
 <!--
 MkDocs version : 0.15.0
-Build Date UTC : 2016-02-21 22:57:36.321342
+Build Date UTC : 2016-02-22 10:52:55.483677
 -->
