--- a/search.html
+++ b/search.html
@@ -34,7 +34,7 @@
 
   <script src="./js/cpp.js"></script>
   <script src="./js/gitter.js"></script>
-  <script src="./js/html.js"></script>
+  <script src="./js/utility.js"></script>
   <script src="./js/youtube.js"></script>
   <script>var base_url = '.';</script>
   <script data-main="./mkdocs/js/search.js" src="./mkdocs/js/require.js"></script>
